[package]
name = "ray_tracer"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.13.0"
palette = "0.6.0"
assert_approx_eq = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.9.4"
rand = "0.8.4"

[dependencies.portable-simd]
package = "std_float"
git = "https://github.com/rust-lang/portable-simd"
branch = "master"
optional = true

[features]
acceleration = ["simd"]
simd = []
